--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "prepare-commit-msg": "prefix-commit-message"
-    }
-  },
-  "lint-staged": {
-    "*.py": ["pipenv run black --check", "pipenv run flake8"]
-  },
-  "devDependencies": {
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.5",
-    "prefix-commit-message": "^1.1.0"
-  }
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged",
+            "prepare-commit-msg": "prefix-commit-message",
+        }
+    },
+    "lint-staged": {"*.py": ["pipenv run black --check", "pipenv run flake8"]},
+    "devDependencies": {
+        "husky": "^1.3.1",
+        "lint-staged": "^8.1.5",
+        "prefix-commit-message": "^1.1.0",
+    },
 }
