[ 169499527 ] - Changed heroku.yml as test for Django.

--- a/heroku.yml
+++ b/heroku.yml
@@ -1,6 +1,6 @@
-build:
-  docker:
-    web: gunicorn --workers=2 --chdir src/happiness conf.wsgi
-  config:
-    SUPERUSER_USERNAME: happinessapp-user
-    SUPERUSER_PASSWORD: happinessapp-pass-2$8,t6$21p
+setup:
+  addons:
+  - plan: heroku-postgresql
+    as: DATABASE
+  run:
+    web: gunicorn --workers=2 --chdir src/happiness conf.wsgi --log-file -
