--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ django = "==2.2.7"
 psycopg2-binary = "*"
 gunicorn = "*"
 whitenoise = "*"
+dj-database-url = "*"
 
 [requires]
 python_version = "3.7"
