--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,8 @@ psycopg2-binary = "*"
 gunicorn = "*"
 whitenoise = "*"
 dj-database-url = "*"
+django-heroku = "*"
+psycopg2 = "*"
 
 [requires]
 python_version = "3.7"
